--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+<%= kjhgf %><%= kjhgf %> does not work
+<% kjhf %><% kjhf %> may not work
+Configure file encoding with a directive?
+What about the output encoding? Not applicable I think.
 The following branches are not merged into the trunk yet:
 	beanshell
 	http-pipelining
